Update pdf generation feature

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -104,6 +104,9 @@ message {
       table-title = "Semaine n°{0} - {1} Activité(s) - {2} kms"
     }
     pdf {
+      generate-start = "Démarrage de la génération du pdf...."
+      generate-successful = "Fin de la génération (^_-)"
+      file.label = "file://{0}"
       preparation.title = "Préparation"
       page {
         menu = "table des matières"
