Archive current training plan

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,10 @@ configuration {
     folder-id = "1O6GLJu1wpK31JntE0oWNDGLU0vaXZneN"
     client-secret = ${configuration.root-data-directory}"/client_secret.json"
     app-name = "Drive API Java Quickstart"
+    year-to-drive-id.map = {
+      "2018" : "1Yf4zLEd1vVPFt_hPqTOpVA7M5Z7B1ONA",
+      "2019" : "13kA-gXdds8-ezQkAX3I9zuoKIWw3_9N6"
+    }
   }
 }
 
@@ -80,7 +84,8 @@ message {
       update-header.title = "Modifier les informations de l'entête"
       add.title = "Ajouter un nouvel entraînement"
       backup.title = "Faire une sauvegarde du suivi actuel"
-      generate.title = "Générer le PDF"
+      generate.title = "Générer un pdf du suivi"
+      archive.title = "Archiver le suivi actuel"
     }
     day {
       set-date.label = "Date du jour (dd/MM/yyyy hh:mm) : "
@@ -113,6 +118,19 @@ message {
         training = "Suivi du plan d'entraînement"
         run-times = "Tableaux de ses temps de passage"
       }
+    }
+    archive {
+      start = "Début de l'archivage..."
+      successful = "Fin de l'archivage (^_-)"
+      failed = "Une erreur est survenue, il est impossible de finaliser l'archivage."
+      goal-achieved.label = "Objectif atteint (1 = oui) : "
+      step-1 = "...données du suivi mises à jour"
+      step-2 = "...génération automatique du pdf"
+      step-3 = "...archivage du plan en local"
+      step-4 = "...sauvegarde des données dans le cloud"
+      new-folder.label = "D - {0} - ({1})"
+      new-file.label = "F - {0} - ({1})"
+      backup-of = "Sauvegarde du contenu de '{0}'."
     }
   }
   training-day.type {
