Fix spelling mistake

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -66,7 +66,7 @@ message {
     start-date.label = "Date du premier jour du plan : {0}"
     set-expected-time.label = "Définir un objectif à atteindre (hh:mm:ss) : "
     expected-time.label = "Objectif à atteindre : {0}"
-    set-plan-file.label = "Donner le chemin d'accès du fichier du programme d'entraînemet à suivre (s'il existe) : "
+    set-plan-file.label = "Donner le chemin d'accès du fichier du programme d'entraînement à suivre (s'il existe) : "
     plan-file.label = "Fichier du programme d'entraînemet à suivre : {0}"
     set-comment.label = "Mettre un commentaire : "
     comment.label = "Commentaire : {0}"
