Add "va'a" new training type

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -132,13 +132,22 @@ message {
       new-file.label = "F - {0} - ({1})"
       backup-of = "Sauvegarde du contenu de '{0}'."
     }
-  }
-  training-day.type {
-    running.label = "course"
-    swimming.label = "natation"
-    biking.label = "vélo"
-    rest.label = "repos"
-    yoga.label = "yoga"
+    training-day.type {
+      running.label = "course"
+      swimming.label = "natation"
+      biking.label = "vélo"
+      rest.label = "repos"
+      yoga.label = "yoga"
+      vaa.label = "va'a"
+    }
+    training-day-type.shortcut.map = {
+      "v" : "bik",
+      "repos" : "rest",
+      "cap" : "run",
+      "n" : "swim",
+      "vaa" : "vaa",
+      "y" : "yoga"
+    }
   }
   km.label = "KM"
   run-times.label = "Temps de passage"
