Set default training 'type' to the plan

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -92,7 +92,7 @@ message {
       set-site.label = "Lieu : "
       set-label.label = "Libellé : "
       set-comment.label = "Commentaire : "
-      set-type.label = "Type de l'activité (défaut = r)* : "
+      set-type.label = "Type de l'activité (défaut = running)* : "
       set-km.label = "Nombre de kilomètres de la séance : "
       type.desc = "*Types d'activité disponibles : Course à pied (r), Natation (s), Cyclisme (b)"
     }
