Add 'resultComment' and 'resultTime' info before to archive current training plan

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -113,10 +113,12 @@ message {
       generate-successful = "Fin de la génération (^_-)"
       file.label = "file://{0}"
       preparation.title = "Préparation"
+      goal-achieved.false = "(;¬_¬)"
+      goal-achieved.true = "Y(^_^)Y"
       page {
         menu = "table des matières"
         training = "Suivi du plan d'entraînement"
-        run-times = "Tableaux de ses temps de passage"
+        result = "Résultats"
       }
     }
     archive {
@@ -124,6 +126,8 @@ message {
       successful = "Fin de l'archivage (^_-)"
       failed = "Une erreur est survenue, il est impossible de finaliser l'archivage."
       goal-achieved.label = "Objectif atteint (1 = oui) : "
+      result-time.label = "Temps (hh:MM:ss) : "
+      result-comment.label = "Commentaire : "
       step-1 = "...données du suivi mises à jour"
       step-2 = "...génération automatique du pdf"
       step-3 = "...archivage du plan en local"
