Remove Google Drive 'current' folder after archiving

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -132,6 +132,7 @@ message {
       step-2 = "...génération automatique du pdf"
       step-3 = "...archivage du plan en local"
       step-4 = "...sauvegarde des données dans le cloud"
+      step-5 = "...nettoyage des données dans le cloud"
       new-folder.label = "D - {0} - ({1})"
       new-file.label = "F - {0} - ({1})"
       backup-of = "Sauvegarde du contenu de '{0}'."
